--- a/.github/workflows/first-workflow.yml
+++ b/.github/workflows/first-workflow.yml
@@ -1,30 +1,35 @@
 name: WTH GitHub workflow
 run-name: ${{ github.actor }} is learning WTH
 
-on: [workflow_dispatch]
+on: 
+    workflow_dispatch:
+    issues:
+        types: [opened, edited, milestoned]
 
 env:
-    DOG_NAME: Fry
+    ROGUE_LEDER: Rogue one
 
 jobs:
     job1:
         name: Job 1
         runs-on: ubuntu-latest
         steps:
-        - name: Simple echo
-          run: echo "Dog name is $DOG_NAME"
+        - name: Echo one
+          run: echo "$ROGUE_LEDER reporting"
+        - name: Echo two
+          run: echo "Rogue two"
 
     job2:
         name: Job 2
         runs-on: ubuntu-latest
         steps:
-            - name: Cow
+            - name: Evil Cow
               uses: mscoutermarsh/cowsays-action@master
               with:
-                  text: 'Woff???'
-                  color: 'green'
-            - name: Dog
-              run: echo "$DOG_SAY"
+                  text: 'Where Are the Droids?'
+                  color: 'red'
+            - name: Planet
+              run: echo "$PLANET"
         needs: job1
         env:
-            DOG_SAY: "Woff on this issue"
+            PLANET: "Alderaan"
