--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -27,7 +27,7 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: dotnet restore
+      run: cd ./Application/src/RazorPagesTestSample && dotnet restore
     - name: Build
       run: dotnet build --no-restore
     - name: Test
