--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -13,6 +13,9 @@ on:
     paths:
       - 'Application/**'
 
+env:
+  working-directory: ./Application/src/RazorPagesTestSample
+
 jobs:
   build:
 
@@ -27,8 +30,11 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: cd ./Application/src/RazorPagesTestSample && dotnet restore
+      run: ls -la && dotnet restore
+      working-directory: ${{ env.working-directory }}
     - name: Build
       run: dotnet build --no-restore
+      working-directory: ${{ env.working-directory }}
     - name: Test
       run: dotnet test --no-build --verbosity normal
+      working-directory: ${{ env.working-directory }}
