--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,7 +30,7 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-      run: ls -la && dotnet restore
+      run: dotnet restore
       working-directory: ${{ env.working-directory }}
     - name: Build
       run: dotnet build --no-restore
