--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,6 +21,9 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    permissions:
+      issues: write
+
     steps:
     - uses: actions/checkout@v3
     - name: Move to Application folder
