--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -33,8 +33,7 @@ jobs:
       with:
         dotnet-version: 6.0.x
     - name: Restore dependencies
-#      run: dotnet restore
-      run: exit 1
+      run: dotnet restore
       working-directory: ${{ env.working-directory }}
     - name: Build
       run: dotnet build --no-restore
@@ -42,7 +41,8 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
       working-directory: ${{ env.working-directory }}
-    - uses: actions/github-script@v6
+    - name: Job error
+      uses: actions/github-script@v6
       id: error-script
       if: failure()
       with:
@@ -51,5 +51,5 @@ jobs:
           github.rest.issues.create({
             owner: context.repo.owner,
             repo: context.repo.repo,
-            title: "Error in run"
+            title: "Error in .NET run"
           })
