--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -62,10 +62,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
       - name: Docker login
         uses: docker/login-action@v2
         with:
@@ -77,4 +73,5 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           push: true
+          context: ./Application/src/RazorPagesTestSample/
           tags: ${{ env.registryName }}/${{ env.repositoryName }}:${{ env.tag }}
