--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -77,8 +77,9 @@ jobs:
           tags: ${{ env.registryName }}/${{ env.repositoryName }}:${{ env.tag }}
     needs: build
 
-  deploy:
+  deploy_dev:
     runs-on: ubuntu-latest
+    environment: dev
     steps:
       - name: Azure Login
         uses: Azure/login@v1
@@ -88,5 +89,20 @@ jobs:
         uses: azure/webapps-deploy@v2
         with:
           app-name: 'vswthdevops-dev'
+          images: ${{ env.registryName }}/${{ env.repositoryName }}:${{ env.tag }}
+    needs: docker
+
+  deploy_test:
+    runs-on: ubuntu-latest
+    environment: test
+    steps:
+      - name: Azure Login
+        uses: Azure/login@v1
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+      - name: Deploy container
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: 'vswthdevops-test'
           images: ${{ env.registryName }}/${{ env.repositoryName }}:${{ env.tag }}
     needs: docker
